updated front end + added styling and 2 logos

--- a/public/personeel.html
+++ b/public/personeel.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/assets/personeel.css">
-    <title>Personeel Dashboard</title>
+    <link rel="stylesheet" href="/src/css/personeel.css">
+    <title>Personeels Dashboard</title>
 </head>
 <body>
     <header>
-        <h1>Personeel Dashboard</h1>
+        <div class="header-content">
+            <img src="/src/assets/logo1.png" alt="Logo" class="logo">
+            <h1>Personeels Dashboard</h1>
+        </div>
     </header>
+    <nav>
+        <div class="nav-links">
+            <a href="#home">Homepage</a>
+            <a href="#medicatie">Medicatie</a>
+            <a href="#voorraad">Voorraad</a>
+            <a href="#bestellingen">Bestellingen</a>
+        </div>
+        <a href="#logout" class="logout-button">Uitloggen</a>
+    </nav>
     <div class="container">
         <div class="card">
             <h2>Medicatie Bekijken</h2>
@@ -27,5 +39,8 @@
             <a href="#bestellingen">Ga naar Bestellingen</a>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2025 Apothecare. Alle rechten voorbehouden.</p>
+    </footer>
 </body>
 </html>
