voorraad is klaar om te bekijken samen met het navigeren daarheen

--- a/public/personeel.html
+++ b/public/personeel.html
@@ -15,9 +15,9 @@
     </header>
     <nav>
         <div class="nav-links">
-            <a href="#home">Homepage</a>
+            <a href="/public/personeel.html">Homepage</a>
             <a href="#medicatie">Medicatie</a>
-            <a href="#voorraad">Voorraad</a>
+            <a href="/public/voorraad.html">Voorraad</a>
             <a href="#bestellingen">Bestellingen</a>
         </div>
         <a href="#logout" class="logout-button">Uitloggen</a>
@@ -31,7 +31,7 @@
         <div class="card">
             <h2>Medicatie Voorraad Bekijken</h2>
             <p>Controleer de voorraadstatus van medicatie.</p>
-            <a href="#voorraad">Ga naar Voorraad</a>
+            <a href="/public/voorraad.html">Ga naar Voorraad</a>
         </div>
         <div class="card">
             <h2>Klanten Bestellingen Bekijken</h2>
