--- a/public/personeel.html
+++ b/public/personeel.html
@@ -16,9 +16,9 @@
     <nav>
         <div class="nav-links">
             <a href="/public/personeel.html">Homepage</a>
-            <a href="#medicatie">Medicatie</a>
+            <a href="/public/medicatie.html">Medicatie</a>
             <a href="/public/voorraad.html">Voorraad</a>
-            <a href="#bestellingen">Bestellingen</a>
+            <a href="/public/bestelling.html">Bestellingen</a>
         </div>
         <a href="#logout" class="logout-button">Uitloggen</a>
     </nav>
@@ -26,7 +26,7 @@
         <div class="card">
             <h2>Medicatie Bekijken</h2>
             <p>Bekijk een overzicht van alle beschikbare medicatie.</p>
-            <a href="#medicatie">Ga naar Medicatie</a>
+            <a href="/public/medicatie.html">Ga naar Medicatie</a>
         </div>
         <div class="card">
             <h2>Medicatie Voorraad Bekijken</h2>
@@ -36,7 +36,7 @@
         <div class="card">
             <h2>Klanten Bestellingen Bekijken</h2>
             <p>Bekijk en beheer bestellingen van klanten.</p>
-            <a href="#bestellingen">Ga naar Bestellingen</a>
+            <a href="/public/bestelling.html">Ga naar Bestellingen</a>
         </div>
     </div>
     <footer>
